--- a/formula1.html
+++ b/formula1.html
@@ -11,7 +11,8 @@
     
     <div class="container">
 
-        <img class="ferrari_f1" src="assets/img/racing-car1.svg" width="300px" height="300px" alt="ferrari formula 1">
+        <img class="ferrari" id='ferrari' src="assets/img/racing-car1.svg" width="512px" height="512px" alt="ferrari formula 1">
+        
         <div class="rectangle1" id="rectangle1"></div>
         <div class="rectangle2" id="rectangle2"></div>
         <div class="rectangle3" id="rectangle3"></div>
